--- a/lifecycle/build.gradle
+++ b/lifecycle/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.pk4us.mvvm"
+        applicationId "com.pk4us.lifecycle"
         minSdk 21
         targetSdk 32
         versionCode 1
