--- a/usecase/build.gradle
+++ b/usecase/build.gradle
@@ -39,6 +39,12 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
 
+    implementation "io.insert-koin:koin-core:3.2.0"
+    implementation "io.insert-koin:koin-android:3.2.0"
+    testImplementation "io.insert-koin:koin-test:3.2.0"
+
+//    implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
